Updated csaw userguide (+ references and linker script), increased csaw version number.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1673 3f7291af-367f-0410-92d8-b778034d9185

--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -1992,7 +1992,7 @@ sessionInfo()
 \section{References}
 
 \bibliographystyle{plainnat}
-\bibliography{yacs_ref}
+\bibliography{ref_ug}
 
 \end{document}
 
