--- a/userguide/ref_ug.bib
+++ b/userguide/ref_ug.bib
@@ -324,28 +324,50 @@ year = {2012},
 }
 
 @Article{humburg2011,
-	       Author="Humburg, P.  and Helliwell, C. A.  and Bulger, D.  and Stone, G. ",
-		             Title="{{C}h{I}{P}seq{R}: analysis of {C}h{I}{P}-seq experiments}",
-					              Journal="BMC Bioinformatics",
-								                  Year="2011",
-												                     Volume="12",
-																	                       Pages="39"
+	Author="Humburg, P.  and Helliwell, C. A.  and Bulger, D.  and Stone, G. ",
+	Title="{{C}h{I}{P}seq{R}: analysis of {C}h{I}{P}-seq experiments}",
+	Journal="BMC Bioinformatics",
+	Year="2011",
+	Volume="12",
+	Pages="39"
 }
 
 @Techreport{phipson2013,
-	    Author="Phipson, B. and Lee, S. and Majewski, I. J. and Alexander, W. S. and Smyth, G. K.",
-		    year = 2013,
-			    title = "{E}mpirical {B}ayes in the presence of exceptional cases, with application to microarray data",
-				    institution= "Bioinformatics Division, Walter and Eliza Hall Institute of Medical Research"
+	Author="Phipson, B. and Lee, S. and Majewski, I. J. and Alexander, W. S. and Smyth, G. K.",
+	year = 2013,
+	title = "{E}mpirical {B}ayes in the presence of exceptional cases, with application to microarray data",
+	institution= "Bioinformatics Division, Walter and Eliza Hall Institute of Medical Research"
 }
 
 @Article{smyth2004,
-	   Author="Smyth, G. K. ",
-	      Title="{{L}inear models and empirical bayes methods for assessing differential expression in microarray experiments}",
-		     Journal="Stat Appl Genet Mol Biol",
-			    Year="2004",
-				   Volume="3",
-				      Pages="Article3"
+	Author="Smyth, G. K. ",
+	Title="{{L}inear models and empirical bayes methods for assessing differential expression in microarray experiments}",
+	Journal="Stat Appl Genet Mol Biol",
+	Year="2004",
+	Volume="3",
+	Pages="Article3"
+}
+
+@Article{ballman2004,
+	Author="Ballman, K. V.  and Grill, D. E.  and Oberg, A. L.  and Therneau, T. M. ",
+	Title="{{F}aster cyclic loess: normalizing {R}{N}{A} arrays via linear models}",
+	Journal="Bioinformatics",
+	Year="2004",
+	Volume="20",
+	Number="16",
+	Pages="2778--2786",
+	Month="Nov"
+}
+
+@Article{law2014,
+	Author="Law, C. W.  and Chen, Y.  and Shi, W.  and Smyth, G. K. ",
+	Title="{{V}oom: precision weights unlock linear model analysis tools for {R}{N}{A}-seq read counts}",
+	Journal="Genome Biol.",
+	Year="2014",
+	Volume="15",
+	Number="2",
+	Pages="R29",
+	Month="Feb"
 }
 
 
