--- a/userguide/ref_ug.bib
+++ b/userguide/ref_ug.bib
@@ -370,4 +370,15 @@ year = {2012},
 	Month="Feb"
 }
 
+@Article{lun2014,
+	Author="Lun, A. T.  and Smyth, G. K. ",
+	Title="{{D}e novo detection of differentially bound regions for {C}h{I}{P}-seq data using peaks and windows: controlling error rates correctly}",
+	Journal="Nucleic Acids Res.",
+	Year="2014",
+	Volume="42",
+	Number="11",
+	Pages="e95",
+	Month="Jul"
+}
+
 
