Cleaned up some references, added section on how to get the datasets (plus references), added roman numerals for TOC.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1788 3f7291af-367f-0410-92d8-b778034d9185

--- a/userguide/ref_ug.bib
+++ b/userguide/ref_ug.bib
@@ -381,4 +381,25 @@ year = {2012},
 	Month="Jul"
 }
 
+@Article{zhang2012,
+	Author="Zhang, J. A.  and Mortazavi, A.  and Williams, B. A.  and Wold, B. J.  and Rothenberg, E. V. ",
+	Title="{{D}ynamic transformations of genome-wide epigenetic marking and transcriptional control establish {T} cell identity}",
+	Journal="Cell",
+	Year="2012",
+	Volume="149",
+	Number="2",
+	Pages="467--482",
+	Month="Apr"
+}
+
+@Article{pal2013,
+   Author="Pal, B.  and Bouras, T.  and Shi, W.  and Vaillant, F.  and Sheridan, J. M.  and Fu, N.  and Breslin, K.  and Jiang, K.  and Ritchie, M. E.  and Young, M.  and Lindeman, G. J.  and Smyth, G. K.  and Visvader, J. E. ",
+   Title="{{G}lobal changes in the mammary epigenome are induced by hormonal cues and coordinated by {E}zh2}",
+   Journal="Cell Rep.",
+   Year="2013",
+   Volume="3",
+   Number="2",
+   Pages="411--426",
+   Month="Feb"
+}
 
