House cleaning on vignette and userguide.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1796 3f7291af-367f-0410-92d8-b778034d9185

--- a/package/vignettes/csaw.Rnw
+++ b/package/vignettes/csaw.Rnw
@@ -15,8 +15,9 @@
 
 \title{Introducing the csaw package}
 \author{Aaron Lun}
-\date{Written 21 June 2014\\
-Last modified 21 June 2014}
+\date{First edition 21 June 2014\\
+\vspace{6pt}
+Last revised 23 June 2014}
 \maketitle
 
 The csaw package is designed for \textit{de novo} detection of differentially
