Cleaned up wording of the user's guide, cleaned up references.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1840 3f7291af-367f-0410-92d8-b778034d9185

--- a/userguide/ref_ug.bib
+++ b/userguide/ref_ug.bib
@@ -9,16 +9,6 @@
    Month="Jan"
 }
 
-@Article{langmead2012,
-   Author="Langmead, B.  and Salzberg, S. L. ",
-   Title="{{F}ast gapped-read alignment with {B}owtie 2}",
-   Journal="Nat. Methods",
-   Year="2012",
-   Volume="9",
-   Number="4",
-   Pages="357--359"
-}
-
 @Article{li2009,
    Author="Li, H.  and Handsaker, B.  and Wysoker, A.  and Fennell, T.  and Ruan, J.  and Homer, N.  and Marth, G.  and Abecasis, G.  and Durbin, R. ",
    Title="{{T}he {S}equence {A}lignment/{M}ap format and {S}{A}{M}tools}",
@@ -40,13 +30,6 @@
    Pages="R25"
 }
 
-@article{edgeR,
-    title={edge{R}: differential expression analysis of digital gene expression data, {U}ser's {G}uide},
-    author={Robinson, M. D. and McCarthy, D. and Smyth, G. K.},
-    month={October},
-    year={2010},
-}
-
 @Article{robinson2008,
    Author="Robinson, M. D.  and Smyth, G. K. ",
    Title="{{S}mall-sample estimation of negative binomial dispersion, with applications to {S}{A}{G}{E} data}",
@@ -58,21 +41,11 @@
    Month="Apr"
 }
 
-@Article{robinson2007,
-   Author="Robinson, M. D.  and Smyth, G. K. ",
-   Title="{{M}oderated statistical tests for assessing differences in tag abundance}",
-   Journal="Bioinformatics",
-   Year="2007",
-   Volume="23",
-   Number="21",
-   Pages="2881--2887",
-   Month="Nov"
-}
-
 @article{benjamini1995,
   title={Controlling the false discovery rate: a practical and powerful approach to multiple testing},
   author={Benjamini, Y. and Hochberg, Y.},
-  journal={Journal of the Royal Statistical Society. Series B (Methodological)},
+  journal={J. R. Stat. Soc. Series B},
+  volume="57",
   pages={289--300},
   year={1995},
   publisher={JSTOR}
@@ -153,15 +126,6 @@
     publisher={Biometrika Trust}
 }
 
-@incollection{westfall2005,
-    title = {Combining {$P$} {V}alues},
-    author = {Westfall, P. H.},
-    publisher = {John Wiley \& Sons, Ltd},
-    booktitle = {Encyclopedia of Biostatistics},
-    editor = {Armitage, P. and Colton, T.},
-    year = {2005},
-}
-
 @Article{kim2008,
    Author="Kim, K. I.  and van de Wiel, M. A. ",
    Title="{{E}ffects of dependence in high-dimensional multiple testing problems}",
@@ -214,23 +178,23 @@
 }
 
 @Article{risso2011,
-	   Author="Risso, D.  and Schwartz, K.  and Sherlock, G.  and Dudoit, S. ",
-	      Title="{{G}{C}-content normalization for {R}{N}{A}-{S}eq data}",
-		     Journal="BMC Bioinformatics",
-			    Year="2011",
-				   Volume="12",
-				      Pages="480"
+	Author="Risso, D.  and Schwartz, K.  and Sherlock, G.  and Dudoit, S. ",
+	Title="{{G}{C}-content normalization for {R}{N}{A}-{S}eq data}",
+	Journal="BMC Bioinformatics",
+	Year="2011",
+	Volume="12",
+	Pages="480"
 }
 
 @Article{cheung2011,
-	   Author="Cheung, M. S.  and Down, T. A.  and Latorre, I.  and Ahringer, J. ",
-	      Title="{{S}ystematic bias in high-throughput sequencing data and its correction by {B}{E}{A}{D}{S}}",
-		     Journal="Nucleic Acids Res.",
-			    Year="2011",
-				   Volume="39",
-				      Number="15",
-					     Pages="e103",
-						    Month="Aug"
+	Author="Cheung, M. S.  and Down, T. A.  and Latorre, I.  and Ahringer, J. ",
+	Title="{{S}ystematic bias in high-throughput sequencing data and its correction by {B}{E}{A}{D}{S}}",
+	Journal="Nucleic Acids Res.",
+	Year="2011",
+	Volume="39",
+	Number="15",
+	Pages="e103",
+	Month="Aug"
 }
 
 @Article{wu2010,
@@ -240,21 +204,6 @@
    Year="2010",
    Volume="7",
    Pages="18"
-}
-
-@article {link2012,
-author = {Link, W. A. and Eaton, M. J.},
-title = {On thinning of chains in {M}{C}{M}{C}},
-journal = {Methods in Ecology and Evolution},
-volume = {3},
-number = {1},
-publisher = {Blackwell Publishing Ltd},
-issn = {2041-210X},
-url = {http://dx.doi.org/10.1111/j.2041-210X.2011.00131.x},
-doi = {10.1111/j.2041-210X.2011.00131.x},
-pages = {112--115},
-keywords = {Markov chain Monte Carlo, thinning, WinBUGS},
-year = {2012},
 }
 
 @Article{landt2012,
@@ -267,19 +216,6 @@ year = {2012},
    Pages="1813--1831",
    Month="Sep"
 }
-
-
-@Article{pepke2009,
-   Author="Pepke, S.  and Wold, B.  and Mortazavi, A. ",
-   Title="{{C}omputation for {C}h{I}{P}-seq and {R}{N}{A}-seq studies}",
-   Journal="Nat. Methods",
-   Year="2009",
-   Volume="6",
-   Number="11 Suppl",
-   Pages="22--32",
-   Month="Nov"
-}
-
 
 @Article{mccarthy2012,
    Author="McCarthy, D. J.  and Chen, Y.  and Smyth, G. K. ",
@@ -316,7 +252,7 @@ year = {2012},
 @Article{lund2012,
    Author="Lund, S. P.  and Nettleton, D.  and McCarthy, D. J.  and Smyth, G. K. ",
    Title="{{D}etecting differential expression in {R}{N}{A}-sequence data using quasi-likelihood with shrunken dispersion estimates}",
-   Journal="Stat Appl Genet Mol Biol",
+   Journal="Stat. Appl. Genet. Mol. Biol.",
    Year="2012",
    Volume="11",
    Number="5",
@@ -342,7 +278,7 @@ year = {2012},
 @Article{smyth2004,
 	Author="Smyth, G. K. ",
 	Title="{{L}inear models and empirical bayes methods for assessing differential expression in microarray experiments}",
-	Journal="Stat Appl Genet Mol Biol",
+	Journal="Stat. Appl. Genet. Mol. Biol.",
 	Year="2004",
 	Volume="3",
 	Pages="Article3"
